--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="weather_condition_bg_desc">Background image representing the current weather condition</string>
     <string name="icon_curr_weather_condition_desc">Icon of the current weather condition</string>
     <string name="splash_screen_desc">Background image to show when app is loading</string>
+    <string name="add_city_weather_button_desc">Button to click when the user wishes to add a city to obtain the weather data of</string>
     <string name="refresh_data_button_desc">Button to click when the user wishes to refresh the weather forecasts</string>
     <string name="change_preferences_button_desc">Button to click when the user wishes to change app settings</string>
 
