Added Search and Random functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
 
     <string name="city_search_api_url">https://maps.googleapis.com/maps/api/place/autocomplete/json?input=%1$s&amp;types=(cities)&amp;key=%2$s&amp;sessiontoken=%3$s</string>
     <string name="places_api_key"></string>
+    <string name="title_activity_searching">SearchingActivity</string>
 </resources>
