--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,5 +61,5 @@
     <string name="city7">Los Angeles</string>
     <string name="city8">Miami</string>
 
-    <string name="about_app_text">Weather Owl\n\nMade by: Gavin Gosling, Sintooran Ravinathan, Alex Zheng</string>
+    <string name="about_app_text">Weather Owl\n\nMade by: Gavin Gosling, Sinthooran Ravinathan, Alex Zheng</string>
 </resources>
